# university-RAG-chatbot

./: .gitignore  LICENSE  README.md  app.py  data_ingestion.py  ingest.py  main.py  pyproject.toml  requirements.txt
chroma_db/cd00cb7b-e387-4117-b46a-d7ba29f7fb63/: index_metadata.pickle
notebook/: document.ipynb  mydocument.ipynb  practice.ipynb
