[project]
name = "openai-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.27",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "streamlit>=1.56.0",
]
